--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,8 +16,83 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="500sp"
+            android:layout_height="700sp"
             android:visibility="visible">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@+id/imageView"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginStart="0dp"
+                android:layout_marginTop="3dp"
+                android:layout_marginEnd="0dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/underweight"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="25sp"
+                    android:text="@string/underweight"
+                    android:textColor="#000000"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:id="@+id/Insufficient"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="25sp"
+                    android:text="@string/Insufficient"
+                    android:textColor="#000000"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:id="@+id/Norm"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="25sp"
+                    android:text="@string/Norm"
+                    android:textColor="#000000"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:id="@+id/preobesity"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="25sp"
+                    android:text="@string/preobesity"
+                    android:textColor="#000000"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:id="@+id/firstDegree"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="25sp"
+                    android:text="@string/firstDegree"
+                    android:textColor="#000000"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:id="@+id/secondDegree"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="25sp"
+                    android:text="@string/secondDegree"
+                    android:textColor="#000000"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:id="@+id/thirdDegree"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="25sp"
+                    android:text="@string/thirdDegree"
+                    android:textColor="#000000"
+                    android:textSize="16sp" />
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/textView20"
@@ -118,11 +193,11 @@
                 android:layout_marginStart="112dp"
                 android:layout_marginTop="23dp"
 
-                android:onClick="onClickAdd"
                 android:text="@string/button1"
                 android:visibility="invisible" />
 
             <RadioGroup
+                android:id="@+id/sex"
                 android:layout_width="109dp"
                 android:layout_height="55sp"
                 android:layout_alignParentTop="true"
@@ -132,7 +207,7 @@
                 android:orientation="horizontal">
 
                 <RadioButton
-                    android:id="@+id/radioButton"
+                    android:id="@+id/girl"
                     android:layout_width="0dp"
                     android:layout_height="45sp"
                     android:layout_weight="1"
@@ -140,7 +215,7 @@
                     android:buttonTintMode="src_atop" />
 
                 <RadioButton
-                    android:id="@+id/radioButton3"
+                    android:id="@+id/men"
                     android:layout_width="1sp"
                     android:layout_height="45sp"
                     android:layout_weight="1"
@@ -169,7 +244,7 @@
                 android:layout_marginStart="0dp"
                 android:layout_marginTop="363dp"
                 android:layout_marginEnd="1dp"
-                android:text="FUEL"
+
                 app:color="#77f577"
                 app:fontName="digital-7 (mono italic).ttf"
                 app:markRange="5"
@@ -179,14 +254,18 @@
 
             <TextView
                 android:id="@+id/result"
-                android:layout_width="180sp"
+                android:layout_width="100sp"
                 android:layout_height="50sp"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
-                android:layout_marginStart="121dp"
-                android:layout_marginTop="481dp"
-                android:textColor="#000000" />
+                android:layout_alignParentEnd="true"
+                android:layout_marginStart="169dp"
+                android:layout_marginTop="252dp"
+                android:layout_marginEnd="142dp"
+                android:textColor="@color/white"
+                android:textSize="24sp" />
         </RelativeLayout>
 
     </ScrollView>
+
 </LinearLayout>
