--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,9 +6,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity">
-
-    <ScrollView
+    tools:context=".activity.MainActivity">
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/pager"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+    <!--<ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/back1test"
@@ -100,7 +103,7 @@
                 android:layout_height="match_parent"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
-                android:layout_marginStart="27sp"
+                android:layout_marginStart="29sp"
                 android:layout_marginTop="57sp"
                 android:text="@string/age"
                 android:textSize="24sp" />
@@ -266,6 +269,6 @@
                 android:textSize="24sp" />
         </RelativeLayout>
 
-    </ScrollView>
+    </ScrollView>-->
 
 </LinearLayout>
