--- a/app/src/main/res/layout/activity_helper.xml
+++ b/app/src/main/res/layout/activity_helper.xml
@@ -6,5 +6,10 @@
     android:layout_height="match_parent"
     android:id="@+id/fragment_container"
     tools:context=".activity.HelperActivity">
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_margin="2dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
 </FrameLayout>
