--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -186,12 +186,12 @@
 
             <Button
                 android:id="@+id/button"
-                android:layout_width="155sp"
-                android:layout_height="48dp"
+                android:layout_width="87dp"
+                android:layout_height="36dp"
                 android:layout_below="@+id/weight"
                 android:layout_alignParentStart="true"
-                android:layout_marginStart="103dp"
-                android:layout_marginTop="72dp"
+                android:layout_marginStart="6dp"
+                android:layout_marginTop="24dp"
 
                 android:text="@string/button1"
                 android:visibility="visible" />
@@ -241,9 +241,9 @@
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true"
-                android:layout_marginStart="0dp"
-                android:layout_marginTop="363dp"
-                android:layout_marginEnd="1dp"
+                android:layout_marginStart="3dp"
+                android:layout_marginTop="354dp"
+                android:layout_marginEnd="-2dp"
 
                 app:color="#77f577"
                 app:fontName="digital-7 (mono italic).ttf"
