--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -190,10 +190,10 @@
                 android:layout_height="36dp"
                 android:layout_below="@+id/weight"
                 android:layout_alignParentStart="true"
-                android:layout_marginStart="6dp"
-                android:layout_marginTop="24dp"
+                android:layout_marginStart="243dp"
+                android:layout_marginTop="234dp"
 
-                android:text="@string/button1"
+                android:background="@drawable/ask"
                 android:visibility="visible" />
 
             <RadioGroup
@@ -228,10 +228,10 @@
                 android:id="@+id/imageView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/button"
+                android:layout_below="@+id/result"
                 android:layout_alignParentStart="true"
                 android:layout_marginStart="0dp"
-                android:layout_marginTop="35sp"
+                android:layout_marginTop="-5dp"
                 app:srcCompat="@drawable/scaletest" />
 
             <com.example.imtcalculator.view.WeightView
@@ -241,9 +241,9 @@
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true"
-                android:layout_marginStart="3dp"
-                android:layout_marginTop="354dp"
-                android:layout_marginEnd="-2dp"
+                android:layout_marginStart="1dp"
+                android:layout_marginTop="323dp"
+                android:layout_marginEnd="0dp"
 
                 app:color="#77f577"
                 app:fontName="digital-7 (mono italic).ttf"
