--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -119,7 +119,7 @@
                 android:textSize="24sp" />
 
             <Spinner
-                android:id="@+id/spinner2"
+                android:id="@+id/spinnerHeight"
                 android:layout_width="100sp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
@@ -187,10 +187,10 @@
                 android:textSize="24sp" />
 
             <Spinner
-                android:id="@+id/spinner3"
+                android:id="@+id/spinnerWeight"
                 android:layout_width="100sp"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/spinner2"
+                android:layout_below="@+id/spinnerHeight"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="44dp"
                 android:layout_toEndOf="@+id/weight" />
