--- a/app/src/main/res/layout/stepsfragmentcount.xml
+++ b/app/src/main/res/layout/stepsfragmentcount.xml
@@ -152,12 +152,13 @@
                             android:text="@string/results"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"/>
+
                         <TextView
-                            android:textSize="14sp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
                             android:layout_marginStart="12dp"
                             android:text="@string/of_the_last_measurement"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
+                            android:textSize="14sp" />
                     </LinearLayout>
 
 
