--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -1,25 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".stepscounter.ListActivity">
-    <ListView
-        android:id="@+id/list"
-        style="@android:style/Widget.DeviceDefault.Light.ExpandableListView"
+    android:orientation="vertical"
+    tools:context=".stepscounter.ListActivity"
+    android:screenOrientation="portrait">
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="672dp"
-        android:layout_marginTop="15dp"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        android:footerDividersEnabled="false"
-        android:headerDividersEnabled="false"
-        android:listSelector="@color/purple_200"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.457"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.505" />
+
+        <ListView
+            android:id="@+id/list"
+            style="@android:style/Widget.DeviceDefault.Light.ExpandableListView"
+            android:layout_width="match_parent"
+            android:layout_height="672dp"
+            android:layout_marginTop="15dp"
+
+            android:footerDividersEnabled="false"
+            android:headerDividersEnabled="false"
+            android:listSelector="@color/purple_200"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.457"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.505" />
+    </LinearLayout>
 </ScrollView>
