update layot for reading data from firebase

--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -19,11 +19,13 @@
             style="@android:style/Widget.DeviceDefault.Light.ExpandableListView"
             android:layout_width="match_parent"
             android:layout_height="672dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginLeft="10dp"
 
+            android:layout_marginTop="15dp"
+            android:layout_marginRight="10dp"
             android:footerDividersEnabled="false"
             android:headerDividersEnabled="false"
-            android:listSelector="@color/purple_200"
+            android:listSelector="@color/teal_200"
             android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
