--- a/app/src/main/res/layout/stepsfragmentcount.xml
+++ b/app/src/main/res/layout/stepsfragmentcount.xml
@@ -395,52 +395,30 @@
             </androidx.cardview.widget.CardView>
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:foregroundGravity="center">
-
-                <EditText
-                    android:layout_width="244dp"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="18dp"
-                    android:hint="Води випито сьогодні в л."
-                    android:inputType="numberDecimal" />
-
-                <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/add"
-                    android:layout_width="75dp"
-                    android:layout_height="50dp"
-                    android:layout_marginLeft="7dp"
-                    android:text="OK" />
-
-
-            </LinearLayout>
-
-            <LinearLayout
                 android:layout_width="353dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
+                android:layout_height="60dp"
+                android:layout_marginStart="15dp"
                 android:foregroundGravity="center">
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/firstml"
                     android:layout_width="75dp"
                     android:layout_height="50dp"
-                    android:layout_marginLeft="7dp"
+                    android:layout_marginStart="7dp"
                     android:text="0.25l" />
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/secondml"
                     android:layout_width="75dp"
                     android:layout_height="50dp"
-                    android:layout_marginLeft="7dp"
+                    android:layout_marginStart="7dp"
                     android:text="0.33l" />
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/thirdml"
                     android:layout_width="75dp"
                     android:layout_height="50dp"
-                    android:layout_marginLeft="7dp"
+                    android:layout_marginStart="7dp"
                     android:text="0.5l" />
 
                 <androidx.appcompat.widget.AppCompatButton
@@ -448,14 +426,15 @@
                     style="@style/Widget.AppCompat.Button"
                     android:layout_width="75dp"
                     android:layout_height="50dp"
-                    android:layout_marginLeft="7dp"
+                    android:layout_marginStart="7dp"
                     android:text="1l" />
+
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="438dp"
+                android:layout_height="382dp"
                 android:foregroundGravity="center"
                 android:orientation="vertical">
 
@@ -464,6 +443,7 @@
                     android:layout_width="360dp"
                     android:layout_height="360dp"
                     android:layout_gravity="center_horizontal|center_vertical"
+                    android:layout_marginTop="15dp"
                     app:arc_color="#FFE0E0E0"
                     app:cavans_bg="@color/blue"
                     app:progress="45"
@@ -472,13 +452,46 @@
 
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="300dp"
+                android:layout_height="100dp"
+                android:layout_marginStart="20dp"
+                android:background="@drawable/ugli"
+                android:orientation="horizontal"
+                android:paddingTop="8dp"
+                android:textColor="@color/black"
 
-            <Space
-                android:layout_width="match_parent"
-                android:layout_height="64dp"/>
+                >
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Випито вами"
+
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:id="@+id/textview_percebt_in_l"
+                    android:layout_width="50dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="16dp"
+                    android:ellipsize="end"
+                    android:maxLines="2"
+                    android:text="0"
+                    android:textAlignment="textEnd"
+
+                    android:textSize="18sp" />
+
+            </LinearLayout>
 
 
-        </LinearLayout>
+
+
+
+            </LinearLayout>
+
+
+
 
     </ScrollView>
 
